update solution for problem 3